tests/cases/fail/from_import_alias_unknown.p4
from math import nope as magnitude

def main() -> None:
    print(1)
